RESOLVED FIXED139630
PutLocalSinkingPhase has an invalid assertion about incoming values, because both liveness and deferral analyses are conservative
https://bugs.webkit.org/show_bug.cgi?id=139630
Summary PutLocalSinkingPhase has an invalid assertion about incoming values, because ...
Filip Pizlo
Reported 2014-12-14 17:24:36 PST
...
Attachments
the patch (73.86 KB, patch)
2014-12-14 17:28 PST, Filip Pizlo
no flags
the patch (10.02 KB, patch)
2014-12-14 17:29 PST, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2014-12-14 17:28:48 PST
Created attachment 243274 [details] the patch
Filip Pizlo
Comment 2 2014-12-14 17:29:15 PST
Whoa I'm pretty sure that the patch is invalid.
Filip Pizlo
Comment 3 2014-12-14 17:29:39 PST
Created attachment 243275 [details] the patch That's better.
WebKit Commit Bot
Comment 4 2014-12-14 19:48:49 PST
Comment on attachment 243275 [details] the patch Clearing flags on attachment: 243275 Committed r177270: <http://trac.webkit.org/changeset/177270>
WebKit Commit Bot
Comment 5 2014-12-14 19:48:53 PST
All reviewed patches have been landed. Closing bug.
Mark Lam
Comment 6 2014-12-15 11:22:35 PST
Note You need to log in before you can comment on or make changes to this bug.